globus-common (15.10-1+gt6.@distro@) @distro@; urgency=low

  * Use Libs.private for common deps

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 22:35:00 -0500

globus-common (15.9-1+gt6.@distro@) @distro@; urgency=low

  * Fix some configure problems

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 12:54:01 -0500

globus-common (15.8-1+gt6.@distro@) @distro@; urgency=low

  * fix inconsistent arch-specific initializer

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 09:08:34 -0500

globus-common (15.7-1+gt6.@distro@) @distro@; urgency=low

  * Fix some configure problems

 -- Globus Toolkit <support@globus.org>  Thu, 06 Feb 2014 15:30:11 -0500

globus-common (15.6-1+gt6.@distro@) @distro@; urgency=low

  * Make scripts the same for arches

 -- Globus Toolkit <support@globus.org>  Thu, 30 Jan 2014 16:41:27 -0500

globus-common (15.5-1+gt6.@distro@) @distro@; urgency=low

  * initializer tweak

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 20:35:50 -0500

globus-common (15.4-1+gt6.@distro@) @distro@; urgency=low

  * Tweak initializer

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 15:52:44 -0500

globus-common (15.3-1+gt6.@distro@) @distro@; urgency=low

  * Add arch-specific initializer

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 11:20:19 -0500

globus-common (15.2-1+gt6.@distro@) @distro@; urgency=low

  * fix missing include of config.h in some .c files

 -- Globus Toolkit <support@globus.org>  Mon, 06 January 2014 12:58:35 -0500

globus-common (15.1-2+gt6.@distro@) @distro@; urgency=low

  * Remove -dev dependency on globus-core

 -- Globus Toolkit <support@globus.org>  Thu, 02 January 2014 14:31:30 -0500

globus-common (15.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix issue with test output
  * Explicitly check for c99 features

 -- Globus Toolkit <support@globus.org>  Fri, 20 December 2013 14:43:55 -0500

globus-common (15.0-1+gt6.@distro@) @distro@; urgency=low
